--- a/layout/public/css/main.css
+++ b/layout/public/css/main.css
@@ -1,10 +1,18 @@
+.data-table a {
+  color: rgb(6,69,173);
+  text-decoration: underline;
+}
+
+.content-header a {
+  text-decoration: underline;
+}
+
 .nav_toggle {
   display: block;
   position: relative;
   width: 1.75rem;
   height: 1.5rem;
   margin: 20px 10px 0 0;
-  /* z-index: 2; */
 }
 .nav_toggle i {
   display: block;
@@ -26,8 +34,6 @@
   bottom: 0;
 }
 
-
-
 .nav_toggle.show i:nth-child(1) {
   transform: translateY(10px) rotate(-45deg);
 }
@@ -38,36 +44,21 @@
   transform: translateY(-12px) rotate(45deg);
 }
 
-
-
-.nav {
-  display: flex;
-  position: fixed;
-  align-items: center;
-  justify-content: center;
-  top: 64px;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0.5s, visibility 0.5s;
-  background-color: #fff;
-  z-index: 1;
-  width: 200px;
-  border: 0.1px solid #6c757d;
-  border-radius: 5px;
+.navi-position {
+  top: 50px;
+  right: 0px;
+  left: -60px;
+  bottom: 0px;
 }
+
+.nav_menu {
+  padding: 5px 0 10px 10px;
+  box-shadow: 8px 8px 21px 0px rgb(0 0 0 / 0.1);
+}
+
 .nav_menu_li {
-  margin-bottom: 30px;
-}
-.nav_menu_li a {
-  text-decoration: none;
-}
-
-.nav.show {
-  opacity: 1;
-  visibility: visible;
+  list-style: none;
+  margin-top: 5px;
 }
 
 .sort.desc:after {
@@ -77,6 +68,14 @@
   content:"▲";
 }
 
+.search-form:after {
+  content:"▼";
+}
+
+.search-form.is-open:after {
+  content:"▲";
+  
+}
 .search-form-content {
   height: 0;
   overflow: hidden;
