権限の全選択チェックボックス作成

--- a/layout/public/css/app.css
+++ b/layout/public/css/app.css
@@ -1053,6 +1053,12 @@ select {
 .ml-5 {
   margin-left: 1.25rem;
 }
+.ml-8 {
+  margin-left: 2rem;
+}
+.ml-7 {
+  margin-left: 1.75rem;
+}
 .block {
   display: block;
 }
