サマリー画面表示(固定値)まで

--- a/layout/public/css/main.css
+++ b/layout/public/css/main.css
@@ -93,3 +93,9 @@
   font-size: 0.75rem;
   color: red;
 }
+
+.analytics-summay-table th,.analytics-summay-table td {
+  text-align: center;
+  padding: 0.5rem;
+  border-width: 1px;
+}
